# coding-theory

./: .gitignore
py/: README.md  galious_field.py  main.py  output  polynomial.py
py/codes/: __init__.py  code.py  hamming_code.py  reed_muller.py  reed_solomon.py
py/utils/: __init__.py  numpy.py  permutation.py
rust/: Cargo.toml
rust/src/: galious_field.rs  main.rs  polynomial.rs  print.rs
