[package]
name = "ct"
version = "0.1.0"
authors = ["Klein, Moritz <moritz.klein@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
primes = "*"
polynomial = "*"
cute = "*"
